# SpotPilot-Quant

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  package-lock.json  package.json  pyproject.toml  spotpilot_quant_local_prd.md  spotpilot_quant_prd_prototype.html
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: dependencies.py  router.py
apps/api/app/api/v1/routes/: ai_analysis.py  backtests.py  dashboard.py  health.py  logs.py  market.py  risk.py  settings.py  strategies.py  system.py  trading.py
apps/api/app/application/: __init__.py  ai.py  ai_providers.py  backtesting 2.py  backtesting.py  news.py  notifications.py  ports.py  risk.py  runtime_scheduler.py  strategies.py  trading.py  workbench.py
apps/api/app/core/: __init__.py  config.py  safety.py
apps/api/app/domain/: __init__.py  models.py
apps/api/app/infrastructure/exchanges/: __init__.py  base.py  binance.py  ccxt_spot.py  factory.py  okx.py
apps/api/app/infrastructure/persistence/: __init__.py  models.py  schema.py  session.py
apps/api/app/infrastructure/repositories/: memory.py  sqlalchemy.py
apps/api/scripts/: init_db.py  sync_binance_candles.py
apps/api/tests/: test_ai_validation.py  test_api_p0_routes.py  test_backtesting.py  test_daily_push.py  test_dry_run_trading.py  test_exchange_adapters.py  test_performance_guardrails.py  test_risk_engine.py  test_spot_boundary.py  test_workbench_p0.py
apps/web/: README.md  (+5 more)
docs/: architecture.md
infra/: docker-compose.yml
scripts/: test-dev-restart.sh  test-dev-start.sh
(+29 files in other folders)
