[project]
name = "spotpilot-quant-api"
version = "0.1.0"
description = "FastAPI service for SpotPilot Quant, the local-first spot crypto quant validation workbench"
authors = [{ name = "Kairo" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "httpx>=0.28,<1",
  "SQLAlchemy>=2.0,<3",
  "PyMySQL>=1.1,<2",
  "python-dotenv>=1.0,<2",
  "ccxt>=4.4,<5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
